--- a/otherProjects.html
+++ b/otherProjects.html
@@ -31,10 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="otherProjects.html">Projects</a></li>
+								<li><a href="resume.html">Resume</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -54,28 +52,46 @@
 								<div class="inner">
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/tic.gif" alt="" /></a>
-											<h3 class="major">Tic-Tac-Toe Robot</h3>
-											<p>This project uses reinforced learning and ROS to have a Universal Robot 5 play Tic-Tac-Toe.</p>
-											<a href="https://github.com/krish-suresh/hiro-ttt-rl-fall-2021" class="special" target="_blank">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/flowcrop.png" alt="" /></a>
+											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="image" target="_blank"><img src="images/flowcrop.png" alt="" /></a>
 											<h3 class="major">Flow Game</h3>
 											<p>This is a recreation of the popular game Flow using Python and the MVC structure.</p>
 											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="special"  target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/boids.gif" alt="" /></a>
+											<a href="https://github.com/richardli03/boid-simulator" class="image" target="_blank"><img src="images/boids.gif" alt="" /></a>
 											<h3 class="major">Boids</h3>
 											<p>This project is a recreation of Boids, bird-oid objects, that mimic the behavior of flocks.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/richardli03/boid-simulator" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://github.com/krish-suresh/hiro-ttt-rl-fall-2021" class="image" target="_blank"><img src="images/tic.gif" alt="" /></a>
+											<h3 class="major">Tic-Tac-Toe Robot</h3>
+											<p>This project uses reinforced learning and ROS to have a Universal Robot 5 play Tic-Tac-Toe.</p>
+											<a href="https://github.com/krish-suresh/hiro-ttt-rl-fall-2021" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://olincollege.github.io/pie-2022-03/deskbot/" class="image" target="_blank"><img src="images/gantrycrop.jpg" alt="" /></a>
+											<h3 class="major">DeskBot</h3>
+											<p>We made an H-Bot Gantry with a system to sort items on a desk.</p>
+											<a href="https://olincollege.github.io/pie-2022-03/deskbot/" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://github.com/krish-suresh/hiro-perfection-game" class="image" target="_blank"><img src="images/perfection.gif" alt="" /></a>
+											<h3 class="major">Perfection Solver</h3>
+											<p>This project has the Universal Robot 5 arms play the shape matching game Perfection.</p>
+											<a href="https://github.com/krish-suresh/hiro-perfection-game" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://github.com/smichalka/MagicBlinkEMG" class="image" target="_blank"><img src="images/mr.gif" alt="" /></a>
+											<h3 class="major">EMG Mixed Reality Control</h3>
+											<p>This project uses Machine Learning to process EMG signals from the arm to control a Mixed Reality Application.</p>
+											<a href="https://github.com/smichalka/MagicBlinkEMG" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="image" target="_blank"><img src="images/newstall.png" alt="" /></a>
+											<h3 class="major">RISC-V Pipelined CPU</h3>
+											<p>This is a pipelined RISC-V CPU designed in SystemVerilog.</p>
+											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
 										</article>
 									</section>
 
@@ -85,8 +101,23 @@
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
-					</section>
+				<section id="footer">
+					<div class="inner">
+						<h2 class="major">Contact Information</h2>
+						<ul class="contact">
+							<li class="icon solid fa-home">
+								3505 Sunflower St<br />
+								Norman, OK 73072
+							</li>
+							<li class="icon solid fa-phone">(405) 326-8578</li>
+							<li class="icon solid fa-envelope"><a href="#">rsiddique@olin.edu</a></li>
+							<li class="icon brands fa-linkedin"><a href="#">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
+						</ul>
+						<ul class="copyright">
+							<li></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</section>
 
 			</div>
 
