--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>Raiyan Siddique's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Raiyan Siddique's Portfolio</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,10 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="otherProjects.html">Projects</a></li>
+								<li><a href="resume.html">Resume</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -44,8 +42,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Resume</h2>
 							</div>
 						</header>
 
@@ -53,29 +50,54 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">Lorem ipsum dolor</h3>
-									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-
+									<h1>Education</h1>
+									<p>OLIN COLLEGE OF ENGINEERING, NEEDHAM, MA<br>MAY 2025</p>
+									<p><strong>Bachelor of Science in Electrical and Computer Engineering</strong><br>GPA: 4.0</p>
+									<p><em>Related Coursework:</em> Software Design; Modeling and Simulation of the Physical World; Introduction Sensors, Instrumentation and Measurement; Data Structures and Algorithms; Discrete Math; Principles of Integrated Engineering; Quantitative Engineering Analysis; Computer Architecture; Introduction to Microelectronic Circuits</p>
+									<h1>Skills</h1>
+									<p>Python, C++, Flutter, Node.js, Amazon Web Services, MATLAB, HTML, CSS, SQL, SOLIDWORKS, LabVIEW, GO, SystemVerilog, Linux, ROS</p>
+									<h1>Experience</h1>
+									<h2>RESEARCHER, OCCAM LABORATORY AT OLIN</h2>
+									<p>JANUARY 2022-CURRENT</p>
+									<ul>
+									  <li>Used and tested Graph based Simultaneous Localization and Mapping (SLAM) algorithms for invisible mapping in Clew, which is an assistive app for the blind</li>
+									  <li>Using sparse bundle adjustment to improve the accuracy and speed of AprilTag detection</li>
+									</ul>
+									<h2>FULLSTACK DEVELOPER, GLIDEPAY LLC</h2>
+									<p>MAY-DECEMBER 2022</p>
+									<ul>
+									  <li>Developing Google extension that enables cryptocurrency payments on online retailers</li>
+									  <li>Created backend system using AWS Lambda and Step Functions that liquidates cryptocurrency, places orders on E-Commerce sites and stores order information in relational database</li>
+									</ul>
+									<h2>RESEARCHER, SCHLUMBERGER AT UNIVERSITY OF OKLAHOMA</h2>
+									<p>JUNE-AUGUST 2022</p>
+									<ul>
+									  <li>Tested damaged O-rings when sealing by recording data under high pressures and temperatures using a DAQ system and analyzed the data to determine leak rates</li>
+									</ul>
+									<h2>RESEARCHER, HUMAN AUGMENTATION LABORATORY AT OLIN</h2>
+									<p>JANUARY-MAY 2022</p>
+									<ul>
+									  <li>Developed a mixed reality application using Magic Leap and Unity</li>
+									  <li>Used k-nearest neighbor algorithm to classify live EMG signals from one’s arm to manipulate controls and change visual stimulus in the Magic Leap device</li>
+									</ul>
+									<h1>Activities and Interests</h1>
+									<h2>MEMBER, OLIN ROCKETRY</h2>
+									<ul>
+									  <li>Working to create a solid fuel engine for a functioning rocket</li>
+									  <li>Using DAQ system and varying sensors, such as pressure transducer and strain gauge, to acquire data on the propulsion system</li>
+									  </ul>
+									  <h2>MEMBER, HUMAN INTERACTION ROBOTICS AT OLIN</h2>
+									  <ul>
+										<li>Worked with Machine Learning Algorithms, Computer Vision and Robot Operating Systems to manipulate Universal Robot 5</li>
+										<li>Programmed UR5 robot to play Hasbro’s Perfection Game by implementing OpenCV and ROS in python to classify and place shapes</li>
+										<li>Working to implement social navigation frameworks on a TurtleBot3</li>
+										</ul>
+										<h2>FPGA PROGRAMMING/ANALOG CIRCUITRY</h2>
+										<ul>
+										  <li>Built functioning EKG, ballistocardiogram, blood pressure monitor and pulse oximeter using RC filters and operational amplifiers</li>
+										  <li>Designed finite state machines and implemented them onto FPGAs</li>
+										  <li>Designed Multicycle and Pipelined RISC-V CPU using System Verilog</li>
+										  </ul>
 								</div>
 							</div>
 
@@ -84,41 +106,18 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<h2 class="major">Contact Information</h2>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									3505 Sunflower St<br />
+									Norman, OK 73072
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(405) 326-8578</li>
+								<li class="icon solid fa-envelope"><a href="#">rsiddique@olin.edu</a></li>
+								<li class="icon brands fa-linkedin"><a href="#">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
