--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="otherProjects.html">Projects</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="resume.html">Resume</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -55,11 +53,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">About Me</h2>
+										<p>I am Electrical and Computer Engineering major at the Franklin W. Olin College of Engineering. I am currently a researcher at the Olin Crowdsourcing and Machine Learning Laboratory. I have experience as a Fullstack Developer and have done various Electrical, Computer, Software, and Integrated Engineering projects.</p>
+										<a href="resume.html" class="special">View My Resume</a>
 									</div>
 								</div>
 							</section>
@@ -84,20 +82,20 @@
 											<a href="https://github.com/krish-suresh/hiro-perfection-game" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/smichalka/MagicBlinkEMG" class="image" target="_blank"><img src="images/mr.gif" alt="" /></a>
+											<h3 class="major">EMG Mixed Reality Control</h3>
+											<p>This project uses Machine Learning to process EMG signals from the arm to control a Mixed Reality Application.</p>
+											<a href="https://github.com/smichalka/MagicBlinkEMG" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="image" target="_blank"><img src="images/newstall.png" alt="" /></a>
+											<h3 class="major">RISC-V Pipelined CPU</h3>
+											<p>This is a pipelined RISC-V CPU designed in SystemVerilog.</p>
+											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="otherProjects.html" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							</section>
@@ -105,46 +103,23 @@
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+				<section id="footer">
+					<div class="inner">
+						<h2 class="major">Contact Information</h2>
+						<ul class="contact">
+							<li class="icon solid fa-home">
+								3505 Sunflower St<br />
+								Norman, OK 73072
+							</li>
+							<li class="icon solid fa-phone">(405) 326-8578</li>
+							<li class="icon solid fa-envelope"><a href="#">rsiddique@olin.edu</a></li>
+							<li class="icon brands fa-linkedin"><a href="#">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
+						</ul>
+						<ul class="copyright">
+							<li></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div>
+				</section>
 
 			</div>
 
