--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>I am Electrical and Computer Engineering major at the Franklin W. Olin College of Engineering. I am currently a researcher at the Olin Crowdsourcing and Machine Learning Laboratory. I have experience as a Fullstack Developer and have done various Electrical, Computer, Software, and Integrated Engineering projects.</p>
+										<p>I am an Electrical and Computer Engineering major at the Franklin W. Olin College of Engineering. I am currently a researcher at the Olin Crowdsourcing and Machine Learning Laboratory. I have experience as a Fullstack Developer and have done various Electrical, Computer, Software, and Integrated Engineering projects.</p>
 										<a href="resume.html" class="special">View My Resume</a>
 									</div>
 								</div>
