--- a/resume.html
+++ b/resume.html
@@ -53,12 +53,25 @@
 									<h1>Education</h1>
 									<p>OLIN COLLEGE OF ENGINEERING, NEEDHAM, MA<br>MAY 2025</p>
 									<p><strong>Bachelor of Science in Electrical and Computer Engineering</strong><br>GPA: 4.0</p>
-									<p><em>Related Coursework:</em> Software Design; Modeling and Simulation of the Physical World; Introduction Sensors, Instrumentation and Measurement; Data Structures and Algorithms; Discrete Math; Principles of Integrated Engineering; Quantitative Engineering Analysis; Computer Architecture; Introduction to Microelectronic Circuits</p>
+									<p><em>Related Coursework:</em> Software Design, Modeling and Simulation of the Physical World, Introduction Sensors, Instrumentation and Measurement, Data Structures and Algorithms, Discrete Math, Principles of Integrated Engineering, Quantitative Engineering Analysis, Computer Architecture, Introduction to Microelectronic Circuits, Software Systems, Mixed Analog Digital VLSI, Computational Introduction to Robotics, Analog Digital Communications</p>
 									<h1>Skills</h1>
-									<p>Python, C++, Flutter, Node.js, Amazon Web Services, MATLAB, HTML, CSS, SQL, SOLIDWORKS, LabVIEW, GO, SystemVerilog, Linux, ROS</p>
+									<p>Python, C/C++, Flutter, Node.js, Amazon Web Services, MATLAB, HTML, CSS, SQL, SOLIDWORKS, LabVIEW, GO, SystemVerilog, VHDL, Vivado, Linux, ROS</p>
 									<h1>Experience</h1>
+									<h2>TEACHING ASSISTANT FOR NEUROTECHNOLOGY AT OLIN</h2>
+									<p>AUGUST 2023-CURRENT</p>
+									<ul>
+									  <li>Assisting Olin's Neurotechnology course, which includes helping teach machine learning concepts
+									</li>
+									</ul>
+									<h2>ENGINEERING INTERN, NORTHROP GRUMMAN</h2>
+									<p>MAY-JULY 2023</p>
+									<ul>
+									  <li>Designed and implemented flash memory and register reading functionality on FPGAs for programming Digital Phase Locked Loops across different proprietary printed circuit boards</li>
+									  <li>Tested, verified and troubleshooted various components on proprietary PCBs</li>
+									  <li>Leveraged the I2C protocol on FPGAs in scripts to clear all the non-volatile memory on PCBs</li>
+									</ul>
 									<h2>RESEARCHER, OCCAM LABORATORY AT OLIN</h2>
-									<p>JANUARY 2022-CURRENT</p>
+									<p>JANUARY 2022-MAY 2023</p>
 									<ul>
 									  <li>Used and tested Graph based Simultaneous Localization and Mapping (SLAM) algorithms for invisible mapping in Clew, which is an assistive app for the blind</li>
 									  <li>Using sparse bundle adjustment to improve the accuracy and speed of AprilTag detection</li>
