added softsys final project

--- a/otherProjects.html
+++ b/otherProjects.html
@@ -93,6 +93,12 @@
 											<p>This is a pipelined RISC-V CPU designed in SystemVerilog.</p>
 											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
 										</article>
+										<article>
+											<a href="https://github.com/olincollege/digits-neural-network/tree/main" class="image" target="_blank"><img src="images/MNIST.jpg" alt="" height="315"/></a>
+											<h3 class="major">Neural Network in C++</h3>
+											<p>This project is a C++ neural network for the MNIST digit recognition problem.</p>
+											<a href="https://github.com/olincollege/digits-neural-network/tree/main" class="special" target="_blank">Learn more</a>
+										</article>
 									</section>
 
 								</div>
