--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>I am an Electrical and Computer Engineering major at the Franklin W. Olin College of Engineering. I am currently a researcher at the Olin Crowdsourcing and Machine Learning Laboratory. I have experience as a Fullstack Developer and have done various Electrical, Computer, Software, and Integrated Engineering projects.</p>
+										<p>I am an Electrical and Computer Engineering major at the Franklin W. Olin College of Engineering. My current interests are in FPGA Engineering and Hardware Acclerators for Neural Networks. Through my time at Olin, I have had the opportunity to work on various Electrical, Computer, Software and Integrated Engineering projects. </p>
 										<a href="resume.html" class="special">View My Resume</a>
 									</div>
 								</div>
@@ -70,6 +70,18 @@
 									<p>Here are some of the projects that I have been working on.</p>
 									<section class="features">
 										<article>
+											<a href="https://github.com/raiyansiddique/neuromorphic_computing_final/tree/main" class="image" target="_blank"><img src="images/neuro.png" alt="" height="200"/></a>
+											<h3 class="major">Neuromorphic Computing</h3>
+											<p>This is a VLSI project on a memristor emulator, synapse and neuron for neuromoprhic applications</p>
+											<a href="https://github.com/raiyansiddique/neuromorphic_computing_final/tree/main" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="image" target="_blank"><img src="images/newstall.png" alt="" /></a>
+											<h3 class="major">RISC-V Pipelined CPU</h3>
+											<p>This is a pipelined RISC-V CPU designed in SystemVerilog.</p>
+											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
 											<a href="https://olincollege.github.io/pie-2022-03/deskbot/" class="image" target="_blank"><img src="images/gantrycrop.jpg" alt="" /></a>
 											<h3 class="major">DeskBot</h3>
 											<p>We made an H-Bot Gantry with a system to sort items on a desk.</p>
@@ -80,18 +92,6 @@
 											<h3 class="major">Perfection Solver</h3>
 											<p>This project has the Universal Robot 5 arms play the shape matching game Perfection.</p>
 											<a href="https://github.com/krish-suresh/hiro-perfection-game" class="special" target="_blank">Learn more</a>
-										</article>
-										<article>
-											<a href="https://github.com/smichalka/MagicBlinkEMG" class="image" target="_blank"><img src="images/mr.gif" alt="" /></a>
-											<h3 class="major">EMG Mixed Reality Control</h3>
-											<p>This project uses Machine Learning to process EMG signals from the arm to control a Mixed Reality Application.</p>
-											<a href="https://github.com/smichalka/MagicBlinkEMG" class="special" target="_blank">Learn more</a>
-										</article>
-										<article>
-											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="image" target="_blank"><img src="images/newstall.png" alt="" /></a>
-											<h3 class="major">RISC-V Pipelined CPU</h3>
-											<p>This is a pipelined RISC-V CPU designed in SystemVerilog.</p>
-											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
