--- a/otherProjects.html
+++ b/otherProjects.html
@@ -52,16 +52,16 @@
 								<div class="inner">
 									<section class="features">
 										<article>
-											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="image" target="_blank"><img src="images/flowcrop.png" alt="" /></a>
-											<h3 class="major">Flow Game</h3>
-											<p>This is a recreation of the popular game Flow using Python and the MVC structure.</p>
-											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="special"  target="_blank">Learn more</a>
-										</article>
-										<article>
-											<a href="https://github.com/richardli03/boid-simulator" class="image" target="_blank"><img src="images/boids.gif" alt="" /></a>
+											<a href="https://github.com/richardli03/boid-simulator" class="image" target="_blank"><img src="images/boids.gif" alt="" height="200" /></a>
 											<h3 class="major">Boids</h3>
 											<p>This project is a recreation of Boids, bird-oid objects, that mimic the behavior of flocks.</p>
 											<a href="https://github.com/richardli03/boid-simulator" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://final-project-fe4ad5.webflow.io/" class="image" target="_blank"><img src="images/vr.gif" alt="" height="240"/></a>
+											<h3 class="major">Augmented Reality Face Detection</h3>
+											<p>This project explored using face detection in augmented reality to extract their 3D position</p>
+											<a href="https://final-project-fe4ad5.webflow.io/" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
 											<a href="https://github.com/krish-suresh/hiro-ttt-rl-fall-2021" class="image" target="_blank"><img src="images/tic.gif" alt="" /></a>
@@ -94,10 +94,22 @@
 											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="https://github.com/olincollege/digits-neural-network/tree/main" class="image" target="_blank"><img src="images/MNIST.jpg" alt="" height="315"/></a>
+											<a href="https://github.com/olincollege/digits-neural-network/tree/main" class="image" target="_blank"><img src="images/MNIST.jpg" alt="" height="200"/></a>
 											<h3 class="major">Neural Network in C++</h3>
 											<p>This project is a C++ neural network for the MNIST digit recognition problem.</p>
 											<a href="https://github.com/olincollege/digits-neural-network/tree/main" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://github.com/raiyansiddique/neuromorphic_computing_final/tree/main" class="image" target="_blank"><img src="images/neuro.png" alt="" height="200"/></a>
+											<h3 class="major">Neuromorphic Computing</h3>
+											<p>This is a VLSI project on memristor emulators, synapse and neurons for neuromoprhic applications</p>
+											<a href="https://github.com/raiyansiddique/neuromorphic_computing_final/tree/main" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="image" target="_blank"><img src="images/flowcrop.png" alt="" /></a>
+											<h3 class="major">Flow Game</h3>
+											<p>This is a recreation of the popular game Flow using Python and the MVC structure.</p>
+											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="special"  target="_blank">Learn more</a>
 										</article>
 									</section>
 
