Updated linkedin link

--- a/otherProjects.html
+++ b/otherProjects.html
@@ -129,7 +129,7 @@
 							</li>
 							<li class="icon solid fa-phone">(405) 326-8578</li>
 							<li class="icon solid fa-envelope"><a href="#">rsiddique@olin.edu</a></li>
-							<li class="icon brands fa-linkedin"><a href="#">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
+							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/raiyan-siddique-623691222/">https://www.linkedin.com/in/raiyan-siddique-623691222/</a></li>
 						</ul>
 						<ul class="copyright">
 							<li></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
