--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 											<a href="https://github.com/MarcEftimie/Pipelined_RISC-V_CPU" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
+											<a href="https://github.com/raiyansiddique/FPGA_Neural_Network/tree/main" class="image" target="_blank"><img src="images/tpu.webp" alt="" /></a>
+											<h3 class="major">FPGA Neural Networks</h3>
+											<p>This is an exploration of FPGA Neural Networks and Tensor Processing Units</p>
+											<a href="https://github.com/raiyansiddique/FPGA_Neural_Network/tree/main" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
 											<a href="https://olincollege.github.io/pie-2022-03/deskbot/" class="image" target="_blank"><img src="images/gantrycrop.jpg" alt="" /></a>
 											<h3 class="major">DeskBot</h3>
 											<p>We made an H-Bot Gantry with a system to sort items on a desk.</p>
@@ -92,6 +98,12 @@
 											<h3 class="major">Perfection Solver</h3>
 											<p>This project has the Universal Robot 5 arms play the shape matching game Perfection.</p>
 											<a href="https://github.com/krish-suresh/hiro-perfection-game" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
+											<a href="https://final-project-fe4ad5.webflow.io/" class="image" target="_blank"><img src="images/vr.gif" alt="" height="350"/></a>
+											<h3 class="major">Augmented Reality Face Detection</h3>
+											<p>This project explored using face detection in augmented reality to extract their 3D position</p>
+											<a href="https://final-project-fe4ad5.webflow.io/" class="special" target="_blank">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
