--- a/otherProjects.html
+++ b/otherProjects.html
@@ -106,6 +106,12 @@
 											<a href="https://github.com/raiyansiddique/neuromorphic_computing_final/tree/main" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
+											<a href="https://github.com/raiyansiddique/FPGA_Neural_Network/tree/main" class="image" target="_blank"><img src="images/tpu.webp" alt="" /></a>
+											<h3 class="major">FPGA Neural Networks</h3>
+											<p>This is an exploration of FPGA Neural Networks and Tensor Processing Units</p>
+											<a href="https://github.com/raiyansiddique/FPGA_Neural_Network/tree/main" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
 											<a href="https://sturdy-disco-82d809bb.pages.github.io/" class="image" target="_blank"><img src="images/flowcrop.png" alt="" /></a>
 											<h3 class="major">Flow Game</h3>
 											<p>This is a recreation of the popular game Flow using Python and the MVC structure.</p>
