--- a/otherProjects.html
+++ b/otherProjects.html
@@ -52,13 +52,19 @@
 								<div class="inner">
 									<section class="features">
 										<article>
+											<a href="https://github.com/kburp/current-output-dac-vlsi/blob/main/dac_report.pdf" class="image" target="_blank"><img src="images/dac_top_layout.png" alt="" height="200"/></a>
+											<h3 class="major">Digital to Analog Converter VLSI</h3>
+											<p>This was a VLSI project focused on improving the performance of a DAC.</p>
+											<a href="https://github.com/kburp/current-output-dac-vlsi/blob/main/dac_report.pdf" class="special" target="_blank">Learn more</a>
+										</article>
+										<article>
 											<a href="https://github.com/richardli03/boid-simulator" class="image" target="_blank"><img src="images/boids.gif" alt="" height="200" /></a>
 											<h3 class="major">Boids</h3>
 											<p>This project is a recreation of Boids, bird-oid objects, that mimic the behavior of flocks.</p>
 											<a href="https://github.com/richardli03/boid-simulator" class="special" target="_blank">Learn more</a>
 										</article>
 										<article>
-											<a href="https://final-project-fe4ad5.webflow.io/" class="image" target="_blank"><img src="images/vr.gif" alt="" height="240"/></a>
+											<a href="https://final-project-fe4ad5.webflow.io/" class="image" target="_blank"><img src="images/vr.gif" alt="" height="400"/></a>
 											<h3 class="major">Augmented Reality Face Detection</h3>
 											<p>This project explored using face detection in augmented reality to extract their 3D position</p>
 											<a href="https://final-project-fe4ad5.webflow.io/" class="special" target="_blank">Learn more</a>
