--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
 									  <li>Using sparse bundle adjustment to improve the accuracy and speed of AprilTag detection</li>
 									</ul>
 									<h2>FULLSTACK DEVELOPER, GLIDEPAY LLC</h2>
-									<p>MAY-DECEMBER 2022</p>
+									<p>MAY 2022-APRIL 2023</p>
 									<ul>
 									  <li>Developing Google extension that enables cryptocurrency payments on online retailers</li>
 									  <li>Created backend system using AWS Lambda and Step Functions that liquidates cryptocurrency, places orders on E-Commerce sites and stores order information in relational database</li>
